@@ -1,3 +1,5 @@
+Added crossed auto correlations to type 1 files
+
 Version 1.4
 ~~~~~~~~~~~
 Version for DiFX-2.4, Nov 4, 2014
